--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.vscode": "1.1.3",
-    "com.unity.test-framework": "1.1.9",
-    "com.unity.timeline": "1.2.9",
+    "com.unity.collab-proxy": "1.3.9",
+    "com.unity.ext.nunit": "1.0.6",
+    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.test-framework": "1.1.24",
+    "com.unity.timeline": "1.4.7",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
